# gl-practice

gl_2d/: CMakeLists.txt  main.cpp
gl_2d/include/: file.h  game.h  resource_manager.h  shader.h  sprite.h  texture.h
gl_2d/resources/models/: suzanne.fbx
gl_2d/resources/shaders/: simpleFragment.glsl  simpleVertex.glsl
gl_2d/src/: file.cpp  game.cpp  resource_manager.cpp  shader.cpp  sprite.cpp  texture.cpp
gl_3d/: CMakeLists.txt  main.cpp
gl_3d/include/: file.h  shader.h  textures.h
gl_3d/practice1/: main.cpp
gl_3d/shaders/: simple_fragment.glsl  simple_fragment2.glsl  simple_vertex.glsl  texture_fragment.glsl  texture_fragment2.glsl  texture_vertex2.glsl  transform_vertex.glsl
gl_3d/src/: file.cpp  shader.cpp  textures.cpp
